--- a/css/styles.css
+++ b/css/styles.css
@@ -358,7 +358,7 @@ line-height: 50px;
 	font-family: 'Titillium Web', sans-serif;
 	text-transform:capitalize !important;
 	font-weight: normal !important;
-	padding:0 0 25px !important;
+	padding:5px 0 0px !important;
 }
 #contactUs .heading h2 {
 	color: #fff;
