--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,12 @@ body {
 }
 ::selection {
 	color: #fff;
-	background: #e65e5e;
+	background: #41a381;
 }
 
 ::-moz-selection {
  color: #fff;
- background: #e65e5e;
+ background: #41a381;
 }
 p {
 	color: #858585;
@@ -65,7 +65,7 @@ height: 6px;
 border-radius:0px;
 }
 .progress .progress-bar.progress-bar-red {
-background: #e65e5e;
+background: #41a381;
 }
 .progress .progress-bar.progress-bar-green {
 background: #51D4B6;
@@ -77,7 +77,7 @@ background: #9FDE32;
 display: inline-block;
 font-size: 18px;
 color: #fff;
-background: #e65e5e;
+background: #41a381;
 margin-right: 20px;
 width: 220px;
 text-align: center;
@@ -110,7 +110,7 @@ overflow: hidden;
 }
 .btn {
 	color:#fff;
-	background: #e65e5e;
+	background: #41a381;
 }
 .btn:hover {
 	 color:#fff !important;
@@ -161,7 +161,7 @@ padding: 8px 12px;
 	background: rgba(255,255,255,0.35);
 }
 a {
-	color: #e65e5e;
+	color: #41a381;
 	text-decoration: none;
 	text-shadow: none;
 	-webkit-transition: all 0.2s linear;
@@ -179,7 +179,7 @@ a:hover {
 	border-radius: 0px;
 }
 .btn-primary {
-	background: #e65e5e;
+	background: #41a381;
 }
 .form-control {
 	border-radius: 0px;
@@ -194,7 +194,7 @@ padding: 20px 0;
 border-top: 1px solid #1D1D1D;
 }
 #home{
-background: #e65e5e;
+background: #41a381;
 }
 #top {
 	position: relative;
@@ -206,10 +206,10 @@ background: #e65e5e;
 	z-index: 5;
 }
 .topHome:hover{
-color:#e65e5e;	
+color:#41a381;	
 	}
 .navbar-inverse .navbar-nav > .active {
-background: #e65e5e;
+background: #41a381;
 }
 /*  Sliders
 ==================================== */
@@ -246,7 +246,7 @@ width: 100%;
 z-index: 100;
 border-radius: 0;
 top: 0px;
-background: #e65e5e;
+background: #41a381;
 border-bottom: 10px solid #130b09;
 }
 .addBg {
@@ -276,7 +276,7 @@ border-bottom: 10px solid #130b09;
 /*.carousel-inner*/
 #myCarousel {
 	margin-top: 50px;
-	border-bottom: 4px solid #e65e5e;
+	border-bottom: 4px solid #3ba07e;
 }
 
 .carousel-caption {
@@ -304,7 +304,7 @@ border-bottom: 10px solid #130b09;
 /*----Nav ----*/
 
 .navbar-brand b {
-	color: #e65e5e;
+	color: #41a381;
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 900;
 }
@@ -358,7 +358,7 @@ line-height: 50px;
 	font-family: 'Titillium Web', sans-serif;
 	text-transform:capitalize !important;
 	font-weight: normal !important;
-	padding:5px 0 0px !important;
+	padding:50px 0 0px !important;
 }
 #contactUs .heading h2 {
 	color: #fff;
@@ -447,7 +447,7 @@ color:#000;
 .carousel-control.left {left: 0px;}
 .carousel-control.right {right:15px;}
 .broun-block {
-   background:#e65e5e;
+   background:#41a381;
     padding-bottom: 34px;
 }
 .block-text {
@@ -465,7 +465,7 @@ color:#000;
     margin-right: auto;
 }
 .block-text a {
- color: #e65e5e;
+ color: #41a381;
     font-size: 25px;
     font-weight: bold;
     line-height: 21px;
@@ -486,7 +486,7 @@ color:#000;
 }
 #contactUs .btn {
 	border-radius: 0px !important;
-	background: #e65e5e;
+	background: #41a381;
 }
 .descrition {
 	min-height: 90px;
@@ -496,12 +496,12 @@ color:#000;
 }
 
 ul.plan.plan2.featured .plan-name {
-background: #e65e5e;
+background: #41a381;
 }
 
 
 .current {
-	background: #e65e5e;
+	background: #41a381;
 	color: #fff;
 } 
 .page-section.intro {
@@ -681,7 +681,7 @@ width: 100%;
 
 @media (max-width: 480px) {
 .header{
-background:#e65e5e;
+background:#41a381;
 }
 .flex-caption{
 display:none;
